--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Methods of the Sword Archive"
 ---
-
+<h1 class="page-heading">{{ page.title }}</h1>
 <p class="newthought">Welcome.</p>
 <p>This is an archive of articles about fencing. </p>
 
