--- a/tmx_viewer.html
+++ b/tmx_viewer.html
@@ -6,13 +6,13 @@ permalink: /tmx_viewer/
 
 <div class="tmx-viewer-page" style="max-width: 900px; margin: 0 auto;">
 
-    <div class="back-nav" style="margin-bottom: 20px;">
-        <a href="{{ '/assets/' | relative_url }}">&larr; Back to File List</a>
+    <div class="back-nav">
+        <a href="{{ '/' | relative_url }}">&larr; Back to Archive</a>
     </div>
 
     <div style="margin-bottom: 10px;">
         <span style="background-color: #f3e5f5; color: #7b1fa2; padding: 4px 8px; font-size: 0.75rem; font-weight: bold; border-radius: 4px; letter-spacing: 1px; text-transform: uppercase;">
-            Dynamic Viewer
+            Side-by-side Viewer
         </span>
     </div>
 
