--- a/tmx_viewer.html
+++ b/tmx_viewer.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Universal TMX Viewer"
-permalink: /viewer/
+permalink: /tmx_viewer/
 ---
 
 <div class="tmx-viewer-page" style="max-width: 900px; margin: 0 auto;">
