--- a/tmx_viewer.html
+++ b/tmx_viewer.html
@@ -186,7 +186,7 @@ document.addEventListener("DOMContentLoaded", function() {
     .tmx-row { display: grid; grid-template-columns: 1fr 1fr; border-bottom: 1px solid #eee; }
     .tmx-row:hover { background-color: #fffaf0; }
     .tmx-cell { padding: 10px; line-height: 1.5; white-space: pre-wrap; }
-    .tmx-cell.source { border-right: 1px solid #eee; color: #555; }
+    .tmx-cell.source { border-right: 1px solid #eee; color: #6e6e6e; }
     @media (max-width: 768px) {
         .tmx-header { display: none; }
         .tmx-row { display: flex; flex-direction: column; }
