--- a/tmx_viewer.html
+++ b/tmx_viewer.html
@@ -151,9 +151,22 @@ document.addEventListener("DOMContentLoaded", function() {
             // ===============================================
             // RENDER LOOP
             // ===============================================
-            // We'll keep a search pointer to map each <tu> to a line number in the raw file.
+            // We'll precompute the line number for each <tu> occurrence in the raw TMX.
+            // This uses a simple counter: find each '<tu' in the raw text in order
+            // and record the 1-based line number. This is deterministic and fast.
             let raw = str; // original fetched text
-            let searchPos = 0;
+            const tuPositions = [];
+            (function computeTuPositions() {
+                let searchPos = 0;
+                while (true) {
+                    const pos = raw.indexOf('<tu', searchPos);
+                    if (pos === -1) break;
+                    const lineNum = raw.slice(0, pos).split(/\r\n|\r|\n/).length;
+                    tuPositions.push(lineNum);
+                    searchPos = pos + 3;
+                }
+            })();
+
             for (let i = 0; i < tus.length; i++) {
                 let tu = tus[i];
                 let tuvs = tu.getElementsByTagName("tuv");
@@ -186,26 +199,9 @@ document.addEventListener("DOMContentLoaded", function() {
 
                 row.appendChild(srcCell);
                 row.appendChild(tgtCell);
-                // Try to find the approximate line number for this <tu> in the raw file
+                // Map this TU to the precomputed <tu> position (if available)
                 let tuLine = 1;
-                try {
-                    let tuIndex = raw.indexOf('<tu', searchPos);
-                    if (tuIndex === -1) {
-                        // fallback: search for a unique snippet from the source text
-                        let snippet = srcText && srcText.length > 10 ? srcText.slice(0, 20) : srcText || tgtText.slice(0,20);
-                        if (snippet) {
-                            let snIndex = raw.indexOf(snippet, searchPos);
-                            if (snIndex !== -1) tuIndex = snIndex;
-                        }
-                    }
-                    if (tuIndex !== -1) {
-                        // compute 1-based line number
-                        tuLine = raw.slice(0, tuIndex).split('\n').length;
-                        searchPos = tuIndex + 1;
-                    }
-                } catch (e) {
-                    // ignore and leave tuLine = 1
-                }
+                if (tuPositions && tuPositions[i]) tuLine = tuPositions[i];
 
                 // Add small per-row edit link that opens GitHub editor at the computed line
                 const editLink = document.createElement('a');
