--- a/tmx_viewer.html
+++ b/tmx_viewer.html
@@ -13,7 +13,7 @@ permalink: /tmx_viewer/
     </div>
 
     <div class="badge-wrap">
-        <span class="badge badge-parallel">Side-by-side</span>
+        <span class="badge badge-parallel">Side-by-side Translation</span>
     </div>
 
     <h1 id="viewer-title">Initializing...</h1>
