--- a/tmx_viewer.html
+++ b/tmx_viewer.html
@@ -201,14 +201,10 @@ document.addEventListener("DOMContentLoaded", function() {
 
             // Helper to clear previous highlights
             function clearHighlights() {
-                rows.forEach(r => { r.classList.remove('highlight'); r.classList.remove('search-hit'); });
-                const resultsBox = document.querySelector('.search-results-box');
-                if (resultsBox) resultsBox.remove();
+                rows.forEach(r => { r.classList.remove('highlight'); });
             }
 
             const lineParam = urlParams.get('line');
-            const qParam = urlParams.get('q');
-            const filterParam = urlParams.get('filter'); // if '1', hide non-matches
 
             // If a specific line is requested, find the TU index with that line
             if (lineParam) {
@@ -227,34 +223,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 }
             }
 
-            // If a search query is present, highlight matches and optionally filter
-            if (qParam) {
-                const q = qParam.trim().toLowerCase();
-                clearHighlights();
-                let matchCount = 0;
-                rows.forEach((r, idx) => {
-                    const src = (r.querySelector('.tmx-cell.source') || {}).textContent || '';
-                    const tgt = (r.querySelector('.tmx-cell.target') || {}).textContent || '';
-                    if ((src + ' ' + tgt).toLowerCase().includes(q)) {
-                        r.classList.add('search-hit');
-                        matchCount += 1;
-                    } else if (filterParam === '1') {
-                        r.style.display = 'none';
-                    }
-                });
-
-                // Show small results box with count and a clear-link
-                const resultsBox = document.createElement('div');
-                resultsBox.className = 'search-results-box';
-                resultsBox.innerHTML = `<strong>Search:</strong> "${escapeHtml(qParam)}" — ${matchCount} result${matchCount !== 1 ? 's' : ''} <a class="clear-search" href="${window.location.pathname + '?file=' + encodeURIComponent(fileName)}">Clear</a>`;
-                if (viewerPage) viewerPage.insertBefore(resultsBox, viewerPage.firstChild);
-
-                // Scroll to first match if any
-                if (matchCount > 0) {
-                    const first = rows.find(r => r.classList.contains('search-hit'));
-                    if (first) setTimeout(() => first.scrollIntoView({ behavior: 'smooth', block: 'center' }), 50);
-                }
-            }
+            // Note: search (`q` / `filter`) functionality removed.
 
             msgContainer.style.display = "none";
             grid.style.display = "block";
@@ -287,8 +256,5 @@ document.addEventListener("DOMContentLoaded", function() {
     .edit-link { margin-left: 0.5rem; font-size: 0.9rem; color: #7b1fa2; text-decoration: none; }
     .edit-link:hover { text-decoration: underline; }
     .highlight { background: #fff7e6; outline: 2px solid #ffd9b3; }
-    .search-hit { background: #fffaf0; }
-    .search-results-box { background: #fff; border: 1px solid #eee; padding: 0.5rem 0.75rem; margin-bottom: 0.75rem; font-size: 0.95rem; }
-    .search-results-box .clear-search { margin-left: 0.75rem; color: var(--accent-color); text-decoration: none; }
-    .search-results-box .clear-search:hover { text-decoration: underline; }
+    /* Search UI removed — related styles cleaned up. */
 </style>
